# theta-db

./: .gitignore  .jvmopts  allparams.txt  build.sbt  demoplot.py  plot.py  script.sh
Docker/: expt-cpp.yaml.template  expt-scala.yaml.template  expt-sql.yaml.template  expt.yaml  test.yaml
Docker/lib/: list.txt
Docker/scripts/: build-cpp.sh  run-cpp.sh  run-scala.sh  run-sql.sh  run.sh  verifyRes.sh
postgres/C/: Makefile  sbjtree.c  tildeop.c
postgres/queries/vwap1/: routines.sql  setup.sql  tables.sql  vwap1.sh  vwap1static.sql
postgres/queries/vwap2/: expt1.sql  routines.sql  tables.sql  vwap2.sh  vwap2.sql  vwap2gen.sql  vwap2static.sql
postgres/sql/: vwap3.sql
postgres/sql/Bids71/: expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/Bids72/: expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB0/: expt.sh  expt1.sql  init.sh  static.sql
postgres/sql/MB1/: expt.sh  expt1.sql  init.sh  static.sql
postgres/sql/MB10/: expt.sh  gen.sql  init.sh  static.sql
postgres/sql/MB2/: expt.sh  expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB3/: expt.sh  expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB4/: expt.sh  expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB5/: expt.sh  expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB6/: expt.sh  expt1.sql  init.sh  static.sql
postgres/sql/MB7/: expt.sh  expt1.sql  gen.sql  init.sh  static.sql
postgres/sql/MB8/: expt.sh  gen.sql  init.sh  static.sql
postgres/sql/MB9/: expt.sh  gen.sql  init.sh  static.sql
postgres/sql/VWAP1/: expt1.sql  init.sh  vwap1.sql  vwap1gen.sql
postgres/sql/VWAP2/: expt1.sql  init.sh  vwap2gen.sql  vwap2static.sql
scripts/: common.py  demoplot.py  plot.py  plot2.py  plot3.py  plot4.py  pullOut.sh  pullRes.sh  push.sh  script.sh  start-expt.sh  stop-expt.sh
src/main/scala/datagen/: Bids.scala
src/main/scala/ds/: Cube.scala  RangeTree.scala  Table.scala
src/main/scala/exec/: Algorithm.scala  Executor.scala  Parameters.scala  ParamsVWAP.scala
src/main/scala/oldds/: RangeTree.scala
src/main/scala/queries/: Bids2.scala  Bids3.scala  Bids4.scala  Bids5.scala  Bids6.scala  Bids71.scala  Bids72.scala  Stock1.scala  Stock10.scala  Stock11.scala  Stock2.scala  Stock3.scala  Stock4.scala  Stock5.scala  Stock6.scala  Stock7.scala  Stock8.scala  Stock9.scala  VWAP1.scala  VWAP2.scala  VWAP3.scala
src/main/scala/queries/dbt/: Bids2.scala  Bids3.scala  Bids4.scala  Bids5.scala  Bids6.scala  VWAP1.scala  VWAP2.scala  VWAP3.scala
src/main/scala/queries/sql/: Bids71.scala  Bids72.scala  MB10.scala  MB2.scala  MB3.scala  MB4.scala  MB5.scala  MB7.scala  MB8.scala  MB9.scala  VWAP1.scala  VWAP2.scala
src/main/scala/query/: VWAP1.scala  VWAP2.scala  VWAP3.scala
src/main/scala/query/dbt/: VWAP1.scala  VWAP2.scala  VWAP3.scala
src/main/scala/sqlgen/: Generator.scala  MBGen.scala  SQL.scala
src/main/scala/utils/: Aggregator.scala  ComparatorOp.scala  Parameters.scala  Utils.scala
src/test/scala/: CubeTest.scala  MultiCubeTest.scala  MultiRangeTreeTest.scala  RangeTreeTest.scala
srccpp/: .gitignore  CMakeLists.txt  main.cpp
srccpp/datagen/: BidsGenerator.cpp  BidsGenerator.h  bidsmain.cpp
srccpp/ds/: Cube.cpp  Cube.h  RangeTree.cpp  RangeTree.h  Table.cpp  Table.h
srccpp/exec/: VWAP.h
srccpp/queries/: Bids2_DBT.h  Bids3_DBT.h  Bids4_DBT.h  Bids5_DBT.h  Bids6_DBT.h  VWAP1_DBT.h  VWAP2_DBT.h  bids2.cpp  bids3.cpp  bids4.cpp  bids5.cpp  bids6.cpp  mb0.cpp  mb2.cpp  vwap1.cpp  vwap2.cpp
srccpp/utils/: Aggregator.h  ComparatorOp.cpp  ComparatorOp.h
